--- a/app/src/main/res/layout/activity_vorooooon.xml
+++ b/app/src/main/res/layout/activity_vorooooon.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".VorooooonActivity">
+    tools:context=".vorooooonMain.VorooooonActivity">
 
     <TextView
         android:id="@+id/text_view"
@@ -21,6 +21,14 @@
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="おちん"
+        android:id="@+id/test_view" />
+
+
 
     <TextView
         android:id="@+id/language_view"
