--- a/app/src/main/res/layout/activity_vorooooon.xml
+++ b/app/src/main/res/layout/activity_vorooooon.xml
@@ -48,6 +48,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/button_permission"
+        android:text="パーミッション設定"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
