--- a/app/src/main/res/layout/activity_vorooooon.xml
+++ b/app/src/main/res/layout/activity_vorooooon.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,51 +10,115 @@
 
     <TextView
         android:id="@+id/text_view"
-        android:text="ここに音声がでるお"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/button_start"
-        android:text="しゃべってぇぇぇ"
-        android:layout_margin="30dp"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="おちん"
-        android:id="@+id/test_view" />
+        android:text="音声認識を開始します"
+        android:textSize="30sp" />
 
+    <ImageButton
+        android:id="@+id/button_start"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/mic"
+        android:scaleType="centerCrop" />
 
 
     <TextView
-        android:id="@+id/language_view"
-        android:text="モード：日本語での実行"
-        android:textSize="10sp"
+        android:id="@+id/test_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="" />
 
-    <Button
-        android:id="@+id/button_japanese"
-        android:text="じゃぽん"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_english"
-        android:text="アメリカ語"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_permission"
-        android:text="パーミッション設定"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/UpButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="250px"
+            android:background="#FFFFFF"
+            android:src="@drawable/up" />
 
+        <ImageButton
+            android:id="@+id/FrontButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250px"
+            android:background="#FFFFFF"
+            android:src="@drawable/up" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/L_turnButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:src="@drawable/left" />
+        <ImageButton
+            android:id="@+id/R_turnButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100px"
+            android:layout_marginRight="100px"
+            android:background="#FFFFFF"
+            android:src="@drawable/right" />
+
+        <ImageButton
+            android:id="@+id/LeftButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100px"
+            android:layout_marginRight="100px"
+            android:background="#FFFFFF"
+            android:src="@drawable/left" />
+        <ImageButton
+            android:id="@+id/RightButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:src="@drawable/right" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/DownButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="250px"
+            android:background="#FFFFFF"
+            android:src="@drawable/down" />
+        <ImageButton
+            android:id="@+id/RearButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250px"
+            android:background="#FFFFFF"
+            android:src="@drawable/down" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/StopButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="500dp"
+        android:background="#FFFFFF"
+        android:src="@drawable/stop" />
 
 
 </LinearLayout>
