--- a/app/src/main/res/layout/activity_vorooooon.xml
+++ b/app/src/main/res/layout/activity_vorooooon.xml
@@ -25,7 +25,7 @@
 
 
     <TextView
-        android:id="@+id/test_view"
+        android:id="@+id/Connection_Status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
